chicago/css/style.css
h1 {
    font-family: "Lora", sans-serif;
    text-align: center;
    font-weight: bold;
    font-size: 39.5px;
    padding-top: 20px;
    padding-bottom: 5px
}

h5 {
    font-family: "Libre Franklin Thin", sans-serif;
    text-align: center;
    font-weight: 300;
    font-size: 18px;
    padding-bottom: 2px
}

h6 {
    font-family: "Libre Franklin Thin", sans-serif;
    font-weight: 500;
    font-size: 18px;
    margin: 0px 84.5px 0px;
    padding-bottom: 18px
}

.subtext {
    font-family: "Libre Franklin Thin", sans-serif;
    font-size: 15.5px;
    font-weight: 100;
    margin: 0px 84.5px;
    padding-bottom: 15px;
}

h8 {
    font-family: "Libre Franklin Thin", sans-serif;
    text-align: center;
    font-weight: 100;
    font-size: 12px;
}

.content-container {
    max-width: 1050px;
    margin: 0 auto;
}

.title-container {
    max-width: 650px;
    margin: 0 auto;
}

.sub-container {
    max-width: 600px;
    margin: 0 auto;
    text-align: center
}

.chart-source {
    font-family: "Libre Franklin Thin"
}

.small-spacer {
    height: 25px;
}

.med-spacer {
    height: 70px;
}

